# agent-sdk

./: .gitignore  AGENTS.md  Agent_SDK_Reference.md  CLAUDE.md  README.md  SKILL_IMPLEMENTATION_SUMMARY.md  context_design.md  pyproject.toml  skill.md  test.md  test_auto_discover.py  test_skill_basic.py  test_skill_e2e.py  test_skill_integration.py  test_subagent.py
bu_agent_sdk/: __init__.py
bu_agent_sdk/agent/: README.md  __init__.py  chat_session.py  core.py  events.py  history.py  init.py  llm.py  llm_levels.py  options.py  prompts.py  runner.py  runner_stream.py  service.py  settings.py  setup.py  system_prompt.py  tool_exec.py  tool_strategy.py
bu_agent_sdk/context/: __init__.py  budget.py  compaction.py  env.py  formatter.py  fs.py  info.py  ir.py  items.py  lower.py  memory.py  observer.py  offload.py  redaction.py
bu_agent_sdk/examples/: chat_session_fork_scripted.py  chat_session_repl.py  chat_session_repl_fork.py  claude_code.py  dependency_injection.py  subagent_example.py  system_tools_smoke_agent.py  system_tools_smoke_direct.py  test_tool_strategy.py  verify_token_fix.py
bu_agent_sdk/llm/: messages.py
bu_agent_sdk/mcp/: __init__.py  config.py  manager.py  sdk_server.py  sdk_tool.py  types.py
bu_agent_sdk/skill/: __init__.py  context.py  loader.py  models.py  prompts.py  skill_tool.py
bu_agent_sdk/subagent/: __init__.py  events.py  loader.py  models.py  prompts.py  task_tool.py
bu_agent_sdk/system_tools/: __init__.py  description.py  registry.py  tools.py
bu_agent_sdk/tokens/: service.py  views.py
bu_agent_sdk/tools/: __init__.py  (+3 more)
comate_agent_sdk/: __init__.py  observability.py
docs/: DEEPSEEK_INTEGRATION.md  askuserquestion-tool.md  chat-session-guide.md  compaction-flow.md  compaction_research.md  compression-strategy.md  context_filesystem.md  fix-assistant-message-token-counting.md  hook-system-analysis.md  implementation_summary.md  observability-guide.md  tool-result-mock-outputs.md
examples/: askuserquestion_example.py  comate.py  kimi_cli_exp.md  skill_examples.py  test.py  test_mcp_debug.py  test_with_debug_logs.py
(+318 files in other folders)
