[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "comate-agent-sdk"
version = "0.0.1"
description = "An agent is just a for-loop. The simplest possible agent framework."
readme = "README.md"
requires-python = ">=3.11"
license = "MIT"
authors = [
    { name = "Andy", email = "andy.dev@aliyun.com" }
]
keywords = ["agent", "llm", "ai", "tool-calling", "anthropic", "openai", "google"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]

dependencies = [
    "pydantic>=2.0.0",
    "aiohttp>=3.9.0",
    "dotenv>=0.9.9",
    "anyio>=4.12.1",
    "httpx>=0.28.1",
    "anthropic>=0.40.0",
    "openai>=1.50.0",
    "google-genai>=1.0.0",
    "pyyaml>=6.0.3",
    "tiktoken>=0.12.0",
    "curl-cffi==0.13.0",
    "markdownify>=1.2.2",
    "mcp>=1.26.0",
    "questionary>=2.1.1",
    "pandoc>=2.4",
    "beautifulsoup4>=4.14.3",
    "markdown>=3.10.1",
    "reportlab>=4.4.9",
]

[project.optional-dependencies]
anthropic = ["anthropic>=0.40.0"]
openai = ["openai>=1.50.0"]
google = ["google-genai>=1.0.0"]
observability = ["lmnr>=0.4.0"]
context = ["tiktoken>=0.5.0"]

[project.urls]
Homepage = "https://github.com/AndyLee1024/agent-sdk"
Documentation = "https://github.com/AndyLee1024/agent-sdk#readme"
Repository = "https://github.com/AndyLee1024/agent-sdk"

[tool.hatch.build.targets.wheel]
packages = ["comate_agent_sdk"]

[tool.hatch.build.targets.sdist]
include = [
    "/comate_agent_sdk",
    "/examples",
    "/README.md",
    "/LICENSE",
]

[dependency-groups]
dev = [
    "langfuse>=3.12.1",
    "opentelemetry-instrumentation-anthropic>=0.52.3",
    "pytest>=9.0.2",
    "rich>=14.3.2",
]
